--- a/.github/workflows/vite-deploy.yml
+++ b/.github/workflows/vite-deploy.yml
@@ -35,10 +35,12 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+      - name: Install pnpm
+        run: npm install -g pnpm
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
       - name: Build
-        run: npm run build
+        run: pnpm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
